# xdapp-examples

./: .gitignore  README.md  deploy.sh  package.json
algorand-project/: README  algorand.py
algorand-project/scripts/: deploy.sh  test.ts  test2.ts
evm-project/: eth-address.txt  hardhat.config.ts  package-lock.json  package.json  tsconfig.json  vaa.txt
evm-project/contracts/: Messenger.sol
evm-project/scripts/: deploy.ts  get_current_msg.ts  register_solana_address.ts  send_msg.ts  seng_msg.ts  submit_vaa.ts
solana-project/: Anchor.toml  package-lock.json  package.json  solana_project-keypair.json  test_keypair.json  vaa.txt
solana-project/programs/solana-project/: Cargo.toml
solana-project/programs/solana-project/src/: context.rs  lib.rs  state.rs  wormhole.rs
solana-project/scripts/: initialize_messenger.ts  register_eth_chain.ts  send_msg.ts  submit_vaa.ts  test.ts  test_key.txt
solana-project/tests/: solana-project.ts
